# task-based-workstealing

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
benchmark/: CMakeLists.txt  benchmark_base.cpp  benchmark_default.hpp  benchmark_reference_tbb.hpp  benchmark_v1.hpp  benchmark_v2.hpp  benchmark_v3.hpp  common_benchmark.hpp  profile_work_stealing_scheduler.cpp
benchmark/graphTools/: adj_array.hpp  edge_list.hpp
eval/: make_plots.R
src/: work_stealing_config.hpp  ws_common.hpp
src/oldVersions/: common.hpp
src/oldVersions/v1_sharedPointerBased/: allocator.hpp  task_group_v1.hpp  task_v1.hpp  work_stealing_scheduler_v1.hpp
src/oldVersions/v1_sharedPointerBased/v1_taskManager/: ChaseLevOwnQueue_v1.hpp  ownQueue_v1.hpp  simpleTaskManager_v1.hpp  tbbConcurrentQueueTaskManager_v1.hpp
src/oldVersions/v2_customAllocation/: concurrent_deque_better_v2.hpp  concurrent_deque_v2.hpp  segmented_stack_v2.hpp  task_group_v2.hpp  task_v2.hpp  work_stealing_scheduler_v2.hpp
src/oldVersions/v2_customAllocation/v2_taskManager/: ChaseLevOwnQueue_v2.hpp  ownQueue_v2.hpp
src/oldVersions/v3_finalVersion/: segmented_stack_v3.hpp  task_group_v3.hpp  task_v3.hpp  work_stealing_scheduler_v3.hpp  work_stealing_scheduler_v3_1.hpp
src/oldVersions/v3_finalVersion/v3_taskManager/: ChaseLevOwnQueue_v3.hpp  ChaseLevOwnQueue_v3_fallback_grow.hpp  easyLockcirculararray_v3.hpp  experimentalGrowableChaseLev.hpp  ownQueue_v3.hpp
src/releaseVersion/: work_stealing_scheduler.hpp
src/structs/: segmented_stack.hpp  seperate_task_queues.hpp  task.hpp  task_group.hpp
src/structs/task_queues/: cyclic_array_atomic.hpp  cyclic_array_atomic_growable_chaseLev.hpp  cyclic_array_lock.hpp
test/: CMakeLists.txt  test_work_stealing_scheduler.cpp  workClasses.hpp
tools/: binaryBalancedTreeGenerator.cpp  unbalancesTreeGenerator.cpp
